--- a/branches/cuda-20080919/src/QMCWaveFunctions/CMakeLists.txt
+++ b/branches/cuda-20080919/src/QMCWaveFunctions/CMakeLists.txt
@@ -55,6 +55,7 @@ ENDIF(QMC_COMPLEX)
 IF(QMC_CUDA)
    SET(FERMION_SRCS ${FERMION_SRCS}
        Fermion/determinant_update.cu 
+       Fermion/DiracDeterminantCUDA.cpp
       )
    SET(JASTROW_SRCS ${JASTROW_SRCS}
        Jastrow/CudaSpline.cu
