--- a/trunk/src/config.h.cmake.in
+++ b/trunk/src/config.h.cmake.in
@@ -186,5 +186,8 @@
 /* Fund acml library */
 #cmakedefine HAVE_ACML @HAVE_ACML@
 
+/* Using CUDA for GPU execution */
+#cmakedefine QMC_CUDA @QMC_CUDA@
+
 #endif // QMCPLUSPLUS_CONFIGURATION_H
 
