Migrate CUDA-related EinsplineSet functions to a separate file.
git-svn-id: http://qmcpack.googlecode.com/svn@4574 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/cuda-20080919/src/QMCWaveFunctions/CMakeLists.txt
+++ b/branches/cuda-20080919/src/QMCWaveFunctions/CMakeLists.txt
@@ -62,7 +62,8 @@ IF(QMC_CUDA)
       )
    IF(HAVE_EINSPLINE)
       SET(FERMION_SRCS ${FERMION_SRCS}
-         EinsplineSetCuda.cu
+         EinsplineSetCuda.cpp
+         PhaseFactors.cu
          AtomicOrbitalCuda.cu
          )
    ENDIF(HAVE_EINSPLINE)
