io and mpi update. See qmcpack.cmscc.org.
git-svn-id: http://qmcpack.googlecode.com/svn@4576 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -25,6 +25,7 @@ SET(UTILITIES
   Message/Communicate.cpp 
   Message/MPIObjectBase.cpp 
   Optimize/VariableSet.cpp
+  io/hdf_archive.cpp
 )
 
 ##gsl library will be optional
