Migrate CUDA portion of ColommPBCABTemp into it's own class.
git-svn-id: http://qmcpack.googlecode.com/svn@4597 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/cuda-20080919/src/QMCHamiltonians/CMakeLists.txt
+++ b/branches/cuda-20080919/src/QMCHamiltonians/CMakeLists.txt
@@ -28,6 +28,7 @@ IF(QMC_CUDA)
    SET(HAMSRCS ${HAMSRCS}
        CudaCoulomb.cu 
        NLPP.cu
+       CoulombPBCAB_CUDA.cpp
       )
 ENDIF(QMC_CUDA)
 
