adding released node builder. modify slaterdeterminantbuilder and electrongasbuilder to build released node determinants if asked. adding releasednode driver factory. adding estimator for rn energy. this is a primitive released node method.
git-svn-id: http://qmcpack.googlecode.com/svn@4598 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -22,13 +22,17 @@ SET(QMCDRIVERS
   VMC/VMCFactory.cpp
   WFMC/WFMCUpdateAll.cpp
   DMC/DMCOMP.cpp
+  DMC/RNDMCOMP.cpp
   DMC/DMCUpdateAll.cpp
   DMC/DMCUpdatePbyP.cpp
   DMC/DMCUpdatePbyPFast.cpp
+  DMC/RNDMCUpdatePbyPFast.cpp
   DMC/DMCFactory.cpp
+  DMC/RNFactory.cpp
   DMC/WalkerControlFactory.cpp
   DMC/WalkerReconfiguration.cpp
   ../Estimators/LocalEnergyEstimator.cpp
+  ../Estimators/ReleasedNodeEnergyEstimator.cpp
   ../Estimators/WFMCOnlyEstimator.cpp
   ../Estimators/FWEstimator.cpp
   ../Estimators/LocalEnergyEstimatorHDF.cpp
