Migrate CUDA versions of MPC into their own class, which inherits from MPC.
git-svn-id: http://qmcpack.googlecode.com/svn@4602 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/cuda-20080919/src/QMCHamiltonians/CMakeLists.txt
+++ b/branches/cuda-20080919/src/QMCHamiltonians/CMakeLists.txt
@@ -30,6 +30,7 @@ IF(QMC_CUDA)
        NLPP.cu
        CoulombPBCAA_CUDA.cpp
        CoulombPBCAB_CUDA.cpp
+       MPC_CUDA.cpp
       )
 ENDIF(QMC_CUDA)
 
