--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -122,6 +122,7 @@ ENDIF(OHMMS_DIM MATCHES 3)
 SET(FERMION_SRCS ${FERMION_SRCS}
   Fermion/DiracDeterminantBase.cpp
   Fermion/RNDiracDeterminantBase.cpp
+  Fermion/RNDiracDeterminantBaseAlternate.cpp
   Fermion/SlaterDet.cpp
   Fermion/SlaterDetBuilder.cpp
   MultiSlaterDeterminant.cpp
