adding estimators and RN drivers
git-svn-id: http://qmcpack.googlecode.com/svn@4648 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -26,13 +26,15 @@ SET(QMCDRIVERS
   DMC/DMCUpdateAll.cpp
   DMC/DMCUpdatePbyP.cpp
   DMC/DMCUpdatePbyPFast.cpp
-  DMC/RNDMCUpdatePbyPFast.cpp
+  DMC/RNDMCUpdatePbyPCeperley.cpp
+  DMC/RNDMCUpdatePbyPAlternate.cpp
   DMC/DMCFactory.cpp
   DMC/RNFactory.cpp
   DMC/WalkerControlFactory.cpp
   DMC/WalkerReconfiguration.cpp
   ../Estimators/LocalEnergyEstimator.cpp
   ../Estimators/ReleasedNodeEnergyEstimator.cpp
+  ../Estimators/AlternateReleasedNodeEnergyEstimator.cpp
   ../Estimators/WFMCOnlyEstimator.cpp
   ../Estimators/FWEstimator.cpp
   ../Estimators/LocalEnergyEstimatorHDF.cpp
