Adding more functionality for nonperiodic boundary conditions with CUDA.
git-svn-id: http://qmcpack.googlecode.com/svn@4667 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCHamiltonians/CMakeLists.txt
+++ b/trunk/src/QMCHamiltonians/CMakeLists.txt
@@ -40,6 +40,7 @@ IF(OHMMS_DIM MATCHES 3)
          CoulombPBCAA_CUDA.cpp
          CoulombPBCAB_CUDA.cpp
          MPC_CUDA.cpp
+         LocalECPotential_CUDA.cpp
          NonLocalECPotential_CUDA.cpp
 	 CoulombPotential_CUDA.cpp
         )
