Adding CUDA version of SkEstimator.  Currently, implementation is empty.
git-svn-id: http://qmcpack.googlecode.com/svn@4692 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCHamiltonians/CMakeLists.txt
+++ b/trunk/src/QMCHamiltonians/CMakeLists.txt
@@ -43,6 +43,7 @@ IF(OHMMS_DIM MATCHES 3)
          LocalECPotential_CUDA.cpp
          NonLocalECPotential_CUDA.cpp
 	 CoulombPotential_CUDA.cpp
+	 SkEstimator_CUDA.cpp
         )
   ENDIF(QMC_CUDA)
 
