Adding shell code for OptimizableSPOSet class, which will be used to optimize orbitals in the basis of an SPOset.
git-svn-id: http://qmcpack.googlecode.com/svn@4708 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -5,6 +5,7 @@ SET(WFBASE_SRCS
     ProductOrbital.cpp
     OrbitalConstraintsBase.cpp
     SPOSetBase.cpp
+    OptimizableSPOSet.cpp
    )
 
 ########################
@@ -122,6 +123,7 @@ ENDIF(OHMMS_DIM MATCHES 3)
 
 SET(FERMION_SRCS ${FERMION_SRCS}
   Fermion/DiracDeterminantBase.cpp
+  Fermion/DiracDeterminantOpt.cpp
   Fermion/RNDiracDeterminantBase.cpp
   Fermion/RNDiracDeterminantBaseAlternate.cpp
   Fermion/SlaterDet.cpp
