--- a/trunk/src/QMCWaveFunctions/Makefile.am
+++ b/trunk/src/QMCWaveFunctions/Makefile.am
@@ -17,35 +17,36 @@ JASTROW_SRCS = \
   OrbitalConstraintsBase.cpp \
   ComboOrbital.cpp
 
-FERMION_SRCS = \
-  BasisSetBase.cpp \
-  SPOSetBase.cpp \
-  BasisSetFactory.cpp \
-  SplineSetBuilder.cpp \
-  TricubicBsplineSetBuilder.cpp \
-  Fermion/DiracDeterminantBase.cpp \
-  Fermion/SlaterDet.cpp \
-  Fermion/SlaterDetBuilder.cpp \
-  PlaneWave/PWBasis.cpp \
-  PlaneWave/PWOrbitalSet.cpp \
-  PlaneWave/PWParameterSet.cpp \
-  PlaneWave/PWOrbitalBuilder.cpp \
-  MolecularOrbitals/STOBuilder.cpp \
-  MolecularOrbitals/GTOBuilder.cpp \
-  MolecularOrbitals/NGOBuilder.cpp \
-  MolecularOrbitals/STOMolecularOrbitals.cpp \
-  MolecularOrbitals/GTOMolecularOrbitals.cpp \
-  MolecularOrbitals/RGFBuilderBase.cpp \
-  MolecularOrbitals/NumericalRGFBuilder.cpp \
-  MolecularOrbitals/STO2GridBuilder.cpp \
-  MolecularOrbitals/GTO2GridBuilder.cpp \
-  MolecularOrbitals/Any2GridBuilder.cpp \
-  MolecularOrbitals/GridMolecularOrbitals.cpp \
+FERMION_SRCS =                                  \
+  BasisSetBase.cpp                              \
+  SPOSetBase.cpp                                \
+  BasisSetFactory.cpp                           \
+  SplineSetBuilder.cpp                          \
+  TricubicBsplineSetBuilder.cpp                 \
+  Fermion/DiracDeterminantBase.cpp              \
+  Fermion/SlaterDet.cpp                         \
+  Fermion/SlaterDetBuilder.cpp                  \
+  OptimizableOrbitalSet.cpp                     \
+  PlaneWave/PWBasis.cpp                         \
+  PlaneWave/PWOrbitalSet.cpp                    \
+  PlaneWave/PWParameterSet.cpp                  \
+  PlaneWave/PWOrbitalBuilder.cpp                \
+  MolecularOrbitals/STOBuilder.cpp              \
+  MolecularOrbitals/GTOBuilder.cpp              \
+  MolecularOrbitals/NGOBuilder.cpp              \
+  MolecularOrbitals/STOMolecularOrbitals.cpp    \
+  MolecularOrbitals/GTOMolecularOrbitals.cpp    \
+  MolecularOrbitals/RGFBuilderBase.cpp          \
+  MolecularOrbitals/NumericalRGFBuilder.cpp     \
+  MolecularOrbitals/STO2GridBuilder.cpp         \
+  MolecularOrbitals/GTO2GridBuilder.cpp         \
+  MolecularOrbitals/Any2GridBuilder.cpp         \
+  MolecularOrbitals/GridMolecularOrbitals.cpp   \
   MolecularOrbitals/MolecularOrbitalBuilder.cpp \
-  Jastrow/ThreeBodyGeminal.cpp \
-  Jastrow/ThreeBodyGeminalBuilder.cpp \
-  Jastrow/ThreeBodyPadeBuilder.cpp \
-  AGPDeterminant.cpp \
+  Jastrow/ThreeBodyGeminal.cpp                  \
+  Jastrow/ThreeBodyGeminalBuilder.cpp           \
+  Jastrow/ThreeBodyPadeBuilder.cpp              \
+  AGPDeterminant.cpp                            \
   AGPDeterminantBuilder.cpp
 
 # build the base library used by any application
