Adding code to evaluate derivatives of determinants of orbitals expanded in a linear basis.
git-svn-id: http://qmcpack.googlecode.com/svn@4714 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -68,7 +68,7 @@ IF(QMC_CUDA)
    SET(FERMION_SRCS ${FERMION_SRCS}
        Fermion/determinant_update.cu 
        Fermion/DiracDeterminantCUDA.cpp
-       Fermion/SlaterDeterminantCUDA.cpp
+       Fermion/SlaterDetCUDA.cpp
        TrialWaveFunction_CUDA.cpp
       )
    SET(JASTROW_SRCS ${JASTROW_SRCS}
