Adding code to build SPOSets before instantiating determinants.  Adding a builder for constructing the OptimizableSPOSet.  The latter does not yet work.
git-svn-id: http://qmcpack.googlecode.com/svn@4721 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -50,6 +50,7 @@ IF(OHMMS_DIM MATCHES 3)
     MolecularOrbitals/GTOBuilder.cpp
     MolecularOrbitals/NGOBuilder.cpp
     MolecularOrbitals/BsplineAOBuilder.cpp
+    OptimizableSPOBuilder.cpp
     )
 
   IF(QMC_COMPLEX)
