Split EinsplineSetBuilder into three files to allow compilation on IBM.
git-svn-id: http://qmcpack.googlecode.com/svn@4741 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -91,7 +91,9 @@ ENDIF(QMC_CUDA)
   IF(HAVE_EINSPLINE)
     SET(FERMION_SRCS ${FERMION_SRCS}
       EinsplineSet.cpp
-      EinsplineSetBuilder.cpp
+      EinsplineSetBuilderCommon.cpp
+      EinsplineSetBuilderOld.cpp
+      EinsplineSetBuilderESHDF.cpp
       EinsplineWrapper.cpp
       MuffinTin.cpp
       AtomicOrbital.cpp
