Break up for IBM compilers.
git-svn-id: http://qmcpack.googlecode.com/svn@4754 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -91,6 +91,7 @@ ENDIF(QMC_CUDA)
   IF(HAVE_EINSPLINE)
     SET(FERMION_SRCS ${FERMION_SRCS}
       EinsplineSet.cpp
+      EinsplineSetLocal.cpp
       EinsplineSetBuilderCommon.cpp
       EinsplineSetBuilderOld.cpp
       EinsplineSetBuilderESHDF.cpp
