Implementation of backflow tansformation (only for walker moves and optimization with finite differences) and preliminiary cusp correction scheme from CASINO
git-svn-id: http://qmcpack.googlecode.com/svn@4755 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -121,6 +121,8 @@ ENDIF(QMC_CUDA)
   IF(QMC_BUILD_LEVEL GREATER 2)
     SET(FERMION_SRCS ${FERMION_SRCS}
       AGPDeterminant.cpp AGPDeterminantBuilder.cpp
+      Fermion/DiracDeterminantWithBackflow.cpp
+      Fermion/SlaterDetWithBackflow.cpp
       )
   ENDIF(QMC_BUILD_LEVEL GREATER 2)
     
