--- a/trunk/src/SandBox/CMakeLists.txt
+++ b/trunk/src/SandBox/CMakeLists.txt
@@ -16,8 +16,11 @@ TARGET_LINK_LIBRARIES(mpi_group qmc qmcbase qmcutil)
 ADD_EXECUTABLE( observable_helper_test  observable_helper_test.cpp)
 TARGET_LINK_LIBRARIES( observable_helper_test qmcbase qmcutil)
 
-ADD_EXECUTABLE( einspline  einspline.cpp)
-TARGET_LINK_LIBRARIES(einspline qmcbase qmcutil)
+ADD_EXECUTABLE( einspline_bench  einspline.cpp)
+TARGET_LINK_LIBRARIES(einspline_bench qmcbase qmcutil)
+
+ADD_EXECUTABLE( einspline_smp  einspline_smp.cpp)
+TARGET_LINK_LIBRARIES(einspline_smp qmcbase qmcutil)
 
 #ADD_EXECUTABLE(gnubug gnubug.cpp)
 #TARGET_LINK_LIBRARIES(gnubug qmcbase qmcutil)
