Add out-place bench marks.
git-svn-id: http://qmcpack.googlecode.com/svn@4788 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/benchmark/CMakeLists.txt
+++ b/trunk/src/benchmark/CMakeLists.txt
@@ -1,4 +1,8 @@
 PROJECT(benchmark)
 
 ADD_EXECUTABLE( fft1d  fft1d.cpp)
-TARGET_LINK_LIBRARIES(fft1d qmcbase qmcutil)
+TARGET_LINK_LIBRARIES(fft1d qmcutil)
+
+ADD_EXECUTABLE( fft1d_bench  fft1d_bench.cpp)
+TARGET_LINK_LIBRARIES(fft1d_bench qmcutil)
+
