Partial implementation of multideterminants. This implementation doesn't use the recursive method, this will be commited in the near future. ***There is a bug in the pbyp routines.***
git-svn-id: http://qmcpack.googlecode.com/svn@4791 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -51,6 +51,8 @@ IF(OHMMS_DIM MATCHES 3)
     MolecularOrbitals/NGOBuilder.cpp
     MolecularOrbitals/BsplineAOBuilder.cpp
     OptimizableSPOBuilder.cpp
+    Fermion/SPOSetProxy.cpp
+    Fermion/SPOSetProxyForMSD.cpp
     )
 
   IF(QMC_COMPLEX)
