added converter for Gamess output files, added Cartesian gaussians to LCAO basis sets (Gamess), added configuration state functions to MultiSlaterDeterminantFast, some extra work is still needed
git-svn-id: http://qmcpack.googlecode.com/svn@4930 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCTools/CMakeLists.txt
+++ b/trunk/src/QMCTools/CMakeLists.txt
@@ -14,6 +14,7 @@ SET(CASINO
   QMCGaussianParserBase.cpp
   GaussianFCHKParser.cpp
   GamesXmlParser.cpp
+  GamesAsciiParser.cpp
   CasinoParser.cpp
   BParser.cpp
   BMakeFunc.cpp
