Enable tilematrix for qmcsystem/supercell@titlematrix to expand a cell.
git-svn-id: http://qmcpack.googlecode.com/svn@4934 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -89,6 +89,7 @@ SET(PARTICLEIO
   ParticleTags.cpp 
   ParticleIO/ParticleLayoutIO.cpp 
   ParticleIO/XMLParticleIO.cpp 
+  ParticleIO/ParticleIOUtility.cpp 
 )
 
 IF(HAVE_LIBHDF5)
