setparams used to choose best set of parameters from multiple optimizations
git-svn-id: http://qmcpack.googlecode.com/svn@4950 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -6,6 +6,7 @@ SET(QMCDRIVERS
   BranchIO.cpp
   QMCDriver.cpp
   QMCOptimize.cpp
+  QMCChooseBestParameters.cpp
   QMCLinearOptimize.cpp
   QMCCostFunctionBase.cpp
   QMCCostFunctionSingle.cpp
